--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-	"name": "byts",
-	"version": "0.0.0",
-	"main": "build/index.js",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build && denoify",
-		"test": "jest",
-		"coverage": "jest --coverage",
-		"lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
-		"format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
-		"verify": "npm run format && npm run lint && npm run coverage",
-		"doc": "typedoc --out doc src"
-	},
-	"devDependencies": {
-		"@types/jest": "^27.4.0",
-		"@types/node": "^17.0.7",
-		"@typescript-eslint/eslint-plugin": "^5.9.0",
-		"@typescript-eslint/parser": "^5.9.0",
-		"avsc": "^5.7.3",
-		"denoify": "^0.10.6",
-		"eslint": "^7.32.0",
-		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^5.2.0",
-		"jest": "^27.4.5",
-		"jest-stare": "^2.3.0",
-		"prettier": "^2.5.1",
-		"ts-jest": "^27.1.2",
-		"ts-node": "^10.4.0",
-		"typedoc": "^0.22.10",
-		"typescript": "^4.5.4",
-		"vite": "^2.7.10"
-	}
+  "name": "byts",
+  "version": "0.0.0",
+  "main": "build/index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build && denoify",
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
+    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "verify": "npm run format && npm run lint && npm run coverage",
+    "doc": "typedoc --out doc src",
+    "clean": "rm -rf build report coverage"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "avsc": "^5.7.3",
+    "denoify": "^0.10.6",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "jest": "^27.4.5",
+    "jest-stare": "^2.3.0",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
+    "typedoc": "^0.22.10",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.10"
+  }
 }
