--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 15.x
-      - name: Install
-        run: npm ci
+      - name: Setup
+        run: |
+          npm ci
+          npm run clean
       - name: Lint
         run: npm run lint
       - name: Test
