--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc && vite build && denoify",
     "test": "jest",
     "coverage": "jest --coverage",
+    "badges": "ts-node scripts/badges",
     "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
     "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "verify": "npm run format && npm run lint && npm run coverage",
