--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.4.5",
-    "jest-stare": "^2.3.0",
+    "jest-html-reporters": "^3.0.3",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
