--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
   "env": {
-    "browser": true,
-    "es2021": true
+    "es2021": true,
+    "shared-node-browser": true
   },
-  "ignorePatterns": ["dist", "build", "coverage", "doc"],
+  "ignorePatterns": ["dist", "build", "coverage", "doc", "report", "scripts"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended"
