--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "sirdez",
   "version": "0.0.0",
   "main": "build/index.js",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build && denoify",
-    "test": "jest",
-    "coverage": "jest --coverage",
+    "lint": "eslint --fix .",
+    "format": "prettier --write .",
+    "prepare": "run-s format lint",
+    "test": "jest --coverage",
+    "verify": "run-p format lint test",
     "badges": "ts-node scripts/badges",
-    "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
-    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
-    "verify": "npm run format && npm run lint && npm run coverage",
+    "clean": "rm -rf dist deno_dist build es_build report coverage",
+    "dist:web": "vite build",
+    "dist:deno": "denoify --out deno_dist",
+    "dist": "run-p dist:*",
+    "build:cjs": "tsc",
+    "build:esm": "tsc --project tsconfig.es.json",
+    "build": "run-p build:*",
+    "dist_build": "run-p dist build",
     "doc": "typedoc --out doc src",
-    "clean": "rm -rf dist deno_build build report coverage"
+    "gen": "run-p dist_build doc"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
