--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
         run: |
           npm ci
           npm run clean
-      - name: Lint source
+      - name: Lint
         run: npm run lint
-      - name: Test source
+      - name: Test
         id: test
         continue-on-error: true
         run: npm run test
