--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 15.x
       - name: Setup environment
         run: |
-          npm ci --include=dev
+          npm ci
           npm run clean
       - name: Lint
         run: npm run lint
