--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --coverage",
     "verify": "run-p format lint test",
     "badges": "ts-node scripts/badges",
-    "clean": "rm -rf dist deno_dist build es_build report coverage",
+    "clean": "rm -rf dist deno_dist build es_build docs report coverage",
     "dist:web": "vite build",
     "dist:deno": "denoify --out deno_dist",
     "dist": "run-p dist:*",
@@ -16,7 +16,7 @@
     "build:esm": "tsc --project tsconfig.es.json",
     "build": "run-p build:*",
     "dist_build": "run-p dist build",
-    "doc": "typedoc --out doc src",
+    "doc": "typedoc --out docs src",
     "gen": "run-p dist_build doc"
   },
   "devDependencies": {
