--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         if: steps.test.outcome == 'success'
         run: |
           npm run gen
-          git add -f dist deno_dist build es_build doc
+          git add -f dist deno_dist build es_build docs
       - name: Push
         env:
           MESSAGE: ${{ github.event.head_commit.message }}
