--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 15.x
-      - name: Setup environment
+          node-version: 16.x
+      - name: Setup
         run: |
           npm ci
           npm run clean
