--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16.x"
+          registry-url: "https://npm.pkg.github.com"
       - name: Setup
         run: npm ci
       - name: Publish
