--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,12 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ci
       - uses: actions/setup-node@v2
         with:
           node-version: "16.x"
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
       - name: Setup
-        run: npm ci
+        run: npm ci && ls
       - name: Publish
         run: npm publish
         env:
