--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "build_and_doc": "run-p build doc"
   },
   "devDependencies": {
+    "@types/benchmark": "^2.1.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "avsc": "^5.7.3",
+    "benchmark": "^2.1.4",
     "denoify": "^0.10.6",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
