--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create test badges
         run: |
           npm run badges
-          git add -f report coverage
+          git add -f report coverage out
       - name: Build and doc
         if: steps.test.outcome == 'success'
         run: |
