--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "test": "jest --coverage",
     "verify": "run-p format lint test",
     "badges": "ts-node scripts/badges",
-    "clean": "rm -rf dist deno_dist build docs report coverage",
+    "clean": "rm -rf dist deno_dist build docs",
     "build:web": "vite build",
     "build:deno": "denoify --out deno_dist",
     "build:node": "tsc",
     "build": "run-p build:*",
-    "doc": "typedoc --out docs src",
-    "build_and_doc": "run-p build doc"
+    "docs:dev": "vuepress dev docs_src",
+    "docs": "vuepress build docs_src && cp -r docs/.vuepress/* docs && rm -r docs/.vuepress",
+    "api": "typedoc",
+    "build_and_docs": "run-p build docs api"
   },
   "devDependencies": {
     "@types/benchmark": "^2.1.1",
@@ -44,7 +46,9 @@
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.4",
-    "vite": "^2.7.10"
+    "vite": "^2.7.10",
+    "vuepress": "^1.9.5",
+    "vuepress-plugin-one-click-copy": "^1.0.6"
   },
   "repository": {
     "type": "git",
@@ -73,5 +77,6 @@
   "bugs": {
     "url": "https://github.com/weisrc/sirdez/issues"
   },
-  "homepage": "https://github.com/weisrc/sirdez#readme"
+  "homepage": "https://github.com/weisrc/sirdez#readme",
+  "description": "Glorious Binary Serialization and Deserialization for TypeScript."
 }
