update npm ignore and npm publish workflow

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
       - name: Setup
-        run: npm ci && ls
+        run: npm ci
       - name: Publish
         run: npm publish
         env:
