--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,10 @@ jobs:
         id: test
         continue-on-error: true
         run: npm run test
-      - name: Benchmark
-        run: npm run benchmark
+      - name: Benchmark and chart
+        run: |
+          npm run benchmark
+          npm run chart
       - name: Create badges and add docs
         run: |
           npm run badges
