--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write .",
     "test": "jest --coverage",
     "verify": "run-p format lint test",
-    "benchmark": "ts-node benchmark",
+    "benchmark": "ts-node benchmark/general && ts-node benchmark/matrix && ts-node benchmark/messages && ts-node benchmark/users",
     "chart": "ts-node scripts/chart",
     "badges": "ts-node scripts/badges",
     "clean": "rm -rf dist deno_dist build && rm -rf docs",
