--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "sirdez",
   "version": "0.0.1",
-  "main": "build/index.js",
+  "main": "build/node.js",
   "exports": {
     ".": {
-      "node": "./build/index.js",
+      "node": "./build/node.js",
       "import": "./dist/sirdez.es.js"
     }
   },
   "scripts": {
+    "ci": "yarn install --immutable --immutable-cache --check-cache",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest --coverage",
@@ -41,7 +42,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "jest": "^27.4.5",
+    "jest": "^27.4.7",
     "jest-html-reporters": "^3.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
