chore: benchmark to perf

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,7 @@ jobs:
         run: yarn test
       - name: Benchmark and chart
         run: |
-          yarn benchmark
-          yarn chart
+          yarn perf
       - name: Create badges and add docs
         run: |
           yarn badges
