--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
       "import": "./dist/sirdez.es.js"
     },
     "./noeval": {
-      "node": "./build/node.js",
-      "import": "./dist/noeval.es.js"
+      "node": "./build/node_noeval.js",
+      "import": "./dist/sirdez.noeval.es.js"
     },
     "./common": {
       "node": "./build/index.js",
@@ -25,7 +25,9 @@
     "perf": "sh perf/run.sh",
     "badges": "ts-node scripts/badges",
     "clean": "rm -rf dist deno_dist build && rm -rf docs",
-    "build:web": "vite build",
+    "build:web:common": "vite build",
+    "build:web:noeval": "vite build --mode noeval",
+    "build:web": "run-p build:web:*",
     "build:deno": "denoify --out deno_dist",
     "build:node": "tsc",
     "build": "run-p build:*",
