--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,5 @@
 name: npm-publish
-on:
-  release:
-    types: [created]
-  workflow_dispatch: {}
+on: [workflow_dispatch]
 jobs:
   publish:
     environment: npm
