--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
-    "typescript": "^4.8.2",
+    "typescript": "4.5.4",
     "vite": "^2.7.10",
     "vuepress": "^1.9.5",
     "vuepress-plugin-one-click-copy": "^1.0.6"
