Allow require imports

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "exports": {
     ".": {
       "node": "./build/node.js",
-      "import": "./dist/sirdez.es.js"
+      "default": "./dist/sirdez.es.js"
     },
     "./eval": {
       "node": "./build/node_eval.js",
-      "import": "./dist/sirdez.eval.es.js"
+      "default": "./dist/sirdez.eval.es.js"
     }
   },
   "scripts": {
